基础页面搭建

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>调色板 | 配色系统 - ipietech.net</title>
+    <title>访客系统 | people - ipietech.com</title>
   </head>
   <body>
     <div id="app"></div>
